--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
-    "openai": "^5.20.3"
+    "openai": "^5.20.3",
+    "stripe": "^18.5.0",
+    "svix": "^1.76.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
